clusters/talos-robbinsdale/apps/media/app/transmission-music/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-music
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission-music
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission-music
    spec:
      containers:
      - name: transmission-music
        image: linuxserver/transmission
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        volumeMounts:
        - name: data-volume
          mountPath: /downloads
        - name: config-volume
          mountPath: /config
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: transmission-music-data-unas
      - name: config-volume
        persistentVolumeClaim:
          claimName: transmission-music-config-unas
