clusters/talos-robbinsdale/apps/media/app/transmission-music/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-music
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission-music
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission-music
    spec:
      containers:
      - name: gluetun
        # renovate: datasource=docker depName=ghcr.io/qdm12/gluetun
        image: ghcr.io/qdm12/gluetun:v3.41.1
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: gluetun-config
          mountPath: /gluetun
      - name: client
        # renovate: datasource=docker depName=lscr.io/linuxserver/transmission
        image: lscr.io/linuxserver/transmission:4.1.2
        ports:
        - name: webui
          containerPort: 9091
          protocol: TCP
        - name: peer-tcp
          containerPort: 51413
          protocol: TCP
        - name: peer-udp
          containerPort: 51413
          protocol: UDP
        volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: downloads-volume
          mountPath: /downloads
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: transmission-music-config
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: media-share
      - name: gluetun-config
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-music
spec:
  selector:
    app: transmission-music
  ports:
  - name: http
    port: 9091
    protocol: TCP
    targetPort: 9091
  type: ClusterIP
