clusters/talos-robbinsdale/apps/media/app/transmission-music/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission-music
  annotations:
    item.homer.rajsingh.info/name: "Transmission Music"
    item.homer.rajsingh.info/subtitle: "Music Torrent Client"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/transmission.svg"
    item.homer.rajsingh.info/keywords: "torrents, downloads"
    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: home
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ts
    namespace: home
  hostnames:
  - transmission-music.${CLUSTER_DOMAIN}
  rules:
  - backendRefs:
    - name: transmission-music
      port: 9091
    matches:
    - path:
        type: PathPrefix
        value: /
